--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "node-sass": "^4.9.4",
+    "react": "next",
+    "react-dom": "next",
     "react-scripts": "2.1.1",
+    "react-transition-group": "^2.5.0",
     "typescript": "^3.1.6"
   },
   "scripts": {
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9"
+    "@types/react-dom": "^16.0.9",
+    "@types/react-transition-group": "^2.0.14"
   }
 }
