--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cubic-spline": "^1.0.4",
+    "delay": "^4.1.0",
     "node-sass": "^4.9.4",
     "react": "next",
     "react-dom": "next",
@@ -26,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
